--- a/glint/pom.xml
+++ b/glint/pom.xml
@@ -50,6 +50,12 @@
         <artifactId>janino</artifactId>
         <version>3.1.9</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.univocity/univocity-parsers -->
+    <dependency>
+        <groupId>com.univocity</groupId>
+        <artifactId>univocity-parsers</artifactId>
+        <version>2.9.1</version>
+    </dependency>
   </dependencies>
 
   <build>
