--- a/glint/pom.xml
+++ b/glint/pom.xml
@@ -56,6 +56,11 @@
         <artifactId>univocity-parsers</artifactId>
         <version>2.9.1</version>
     </dependency>
+    <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>5.15.2</version>
+    </dependency>
   </dependencies>
 
   <build>
