feat: Implement parquet datasource with schema conversion
fix: some schema propagation bugs

feat: add a main java app to test on nyc trips dataset

--- a/.gitignore
+++ b/.gitignore
@@ -95,4 +95,7 @@ TODO.md
 TODO.rst
 TODO
 
+### Datasets ###
+datasets/
+
 # End of https://www.toptal.com/developers/gitignore/api/java,maven,visualstudiocode,gradle
