feat: Move examples to a package and re-write the buggy Parquet datasource
feat: Show usage guide in README

--- a/.gitignore
+++ b/.gitignore
@@ -98,4 +98,8 @@ TODO
 ### Datasets ###
 datasets/
 
+### Python Environment ###
+env/
+.venv/
+
 # End of https://www.toptal.com/developers/gitignore/api/java,maven,visualstudiocode,gradle
