fix: Github action messing up

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,5 +26,7 @@ jobs:
         java-version: '21'
         distribution: 'temurin'
         cache: maven
+    - name: Cleanup existing or cached artefacts.
+      run: mvn -B clean --file glint/pom.xml
     - name: Build & Run Tests with Maven
       run: mvn -B package --file glint/pom.xml
